# XBOX-Godot-Sample

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  session_context.md  vcpkg-configuration.json  vcpkg.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
addons/godot_gameinput/: CMakeLists.txt  plugin.cfg
addons/godot_gameinput/doc_classes/: GameInput.xml  GameInputActionMap.xml  GameInputBinding.xml  GameInputDevice.xml  GameInputMapper.xml  GameInputReading.xml
addons/godot_gameinput/runtime/: gameinput_bootstrap.gd
addons/godot_gameinput/src/: gameinput_action_map.cpp  gameinput_action_map.h  gameinput_binding.cpp  gameinput_binding.h  gameinput_device.cpp  gameinput_device.h  gameinput_extension.cpp  gameinput_extension.h  gameinput_mapper.cpp  gameinput_mapper.h  gameinput_reading.cpp  gameinput_reading.h  gameinput_singleton.cpp  gameinput_singleton.h  register_types.cpp  register_types.h
addons/godot_gdk/: CMakeLists.txt
addons/godot_gdk/doc_classes/: GDK.xml  GDKAccessibility.xml  GDKAchievement.xml  GDKAchievements.xml  GDKActivation.xml  GDKAsyncOp.xml  GDKCapture.xml  GDKCaptureMetaData.xml  GDKClosedCaptionProperties.xml  GDKDispatchOp.xml  GDKDisplay.xml  GDKDisplayTimeoutDeferral.xml  GDKGameUI.xml  GDKLauncher.xml  GDKLeaderboard.xml  GDKLeaderboardColumn.xml  GDKLeaderboardRow.xml  GDKLeaderboards.xml  GDKMultiplayerActivity.xml  GDKMultiplayerActivityInfo.xml  GDKPackage.xml  GDKPackageMount.xml  GDKPackageResourcePack.xml  GDKPresence.xml  GDKPresenceRecord.xml  GDKPrivacy.xml  GDKProfile.xml  GDKResult.xml  GDKSocial.xml  GDKSocialFilter.xml  GDKSocialGroup.xml  GDKSocialUser.xml  GDKStats.xml  GDKStore.xml  GDKStoreLicenseStatus.xml  GDKStringVerify.xml  GDKSystem.xml  GDKTitleStorage.xml  GDKTitleStorageBlobMetadata.xml  GDKTitleStorageBlobMetadataResult.xml  (+3 more)
addons/godot_gdk/editor/: gdk_export_platform.gd
addons/godot_gdk/runtime/: gdk_bootstrap.gd
addons/godot_gdk/src/: gdk.cpp  gdk.h  gdk_accessibility.cpp  gdk_accessibility.h  gdk_achievement.cpp  gdk_achievement.h  gdk_achievements.cpp  gdk_activation.cpp  gdk_activation.h  gdk_async_op.cpp  gdk_async_op.h  gdk_capture.cpp  gdk_capture.h  gdk_core.h  gdk_dispatch_op.cpp  gdk_dispatch_op.h  gdk_display.cpp  gdk_display.h  gdk_error_reporting.cpp  gdk_error_reporting.h  gdk_game_ui.cpp  gdk_game_ui.h  gdk_input.cpp  gdk_input.h  gdk_launcher.cpp  gdk_launcher.h  gdk_leaderboards.cpp  gdk_leaderboards.h  gdk_multiplayer_activity.cpp  gdk_multiplayer_activity.h  gdk_package.cpp  gdk_package.h  gdk_pending_signal.cpp  gdk_pending_signal.h  gdk_presence.cpp  gdk_presence.h  gdk_privacy.cpp  gdk_privacy.h  gdk_profile.cpp  gdk_profile.h  (+26 more)
addons/godot_gdk/tests_support/: .gut_skip_validation
addons/godot_gdk/tests_support/bases/: gameinput_test_base.gd  gdk_test_base.gd  playfab_test_base.gd  test_env.gd
addons/godot_playfab/: CMakeLists.txt  playfab_api_manifest.json
addons/godot_playfab/WinGDK/: DeviceResourcesPC.cpp  GDKPch.h  GamePC.cpp  GamePC.h  Keyboard.cpp
addons/godot_playfab/doc_classes/: PlayFab.xml  PlayFabAccounts.xml  PlayFabAsyncOp.xml  PlayFabCatalog.xml  PlayFabCloudScript.xml  PlayFabEntityData.xml  PlayFabEvents.xml  PlayFabExperimentation.xml  PlayFabFriends.xml  PlayFabGameSaves.xml  PlayFabGroups.xml  PlayFabInventory.xml  PlayFabLeaderboards.xml  PlayFabLobby.xml  PlayFabLobbyConfig.xml  PlayFabLobbyInvite.xml  PlayFabLobbyJoinConfig.xml  PlayFabLobbyMember.xml  PlayFabLobbySearchConfig.xml  PlayFabLobbySearchResult.xml  PlayFabLobbyStateChange.xml  PlayFabLobbySummary.xml  PlayFabLocalization.xml  PlayFabMatchTicket.xml  PlayFabMatchTicketStateChange.xml  PlayFabMatchmakingMember.xml  PlayFabMatchmakingTicketConfig.xml  PlayFabMultiplayer.xml  PlayFabMultiplayerConfig.xml  PlayFabMultiplayerStateChange.xml  PlayFabParty.xml  PlayFabPartyChat.xml  PlayFabPartyChatControl.xml  PlayFabPartyChatMessage.xml  PlayFabPartyChatStateChange.xml  PlayFabPartyConfig.xml  PlayFabPartyMember.xml  PlayFabPartyNetwork.xml  PlayFabPartyNetworkStateChange.xml  PlayFabPartyPeer.xml  (+7 more)
addons/godot_playfab/src/: EntityHandle.cpp  EntityHandle.h  GenericPlayer.cpp  PFUtils.cpp  PFUtils.h  PlayFabCoreManager.cpp  PlayFabCoreManager.h  PlayFabManager.cpp  PlayFabManager.h  PlayFabMultiplayer.cpp  PlayFabMultiplayer.h  PlayFabParty.cpp  PlayFabParty.h  PlayFabServices.cpp  PlayFabServices.h  Player.h  pch.h  playfab.cpp  playfab.h  playfab_api_helpers.cpp  playfab_api_helpers.h  playfab_async_op.cpp  playfab_async_op.h  playfab_gamesaves.cpp  playfab_gamesaves.h  playfab_generated_api_helpers.cpp  playfab_generated_api_helpers.h  playfab_leaderboards.cpp  playfab_leaderboards.h  playfab_multiplayer.cpp  playfab_multiplayer.h  playfab_party.cpp  playfab_party.h  playfab_pending_signal.cpp  playfab_pending_signal.h  playfab_result.cpp  playfab_result.h  playfab_runtime.cpp  playfab_runtime.h  playfab_signal_xasync_context.cpp  (+9 more)
addons/godot_playfab/src/PFCore/: PlayFabAuthentication.cpp  PlayFabAuthentication.h  PlayFabCore.cpp  PlayFabCore.h  PlayFabServiceConfig.cpp  PlayFabServiceConfig.h
addons/godot_playfab/src/api/: playfab_api_models.cpp  playfab_api_models.h  playfab_api_services.cpp  playfab_api_services.h
cmake/: GDKDependencies.cmake  GodotExtensionCommon.cmake  run_doc_source_generator.py
docs/: README.md  addon-getting-started.md  async-patterns.md  getting-started.md  godot-gameinput-manual-tests.md  godot-gameinput.md  godot-gdk-api-reference.md  godot-gdk-async-system.md  godot-gdk-build-and-loading.md  godot-gdk-editor-tools.md  godot-gdk-native-runtime.md  godot-gdk-packaging.md  godot-gdk-plugin.md  godot-gdk-sample-and-tests.md  godot-gdk-sample-setup.md  godot-playfab-plugin.md  troubleshooting.md  xbox-sandbox-and-test-account-setup.md
sample/: gdk_bootstrap.gd  main.gd  main.tscn  project.godot
sample_shamwow/: gdk_bootstrap.gd  main.gd  main.tscn
spec/: dedicated-godot-test-hosts.md  gdext-csharp.md  gdext-gameinput.md  gdext-gdk.md  gdext-packaging.md  gdext-playfab-party.md  (+3 more)
(+675 files in other folders)
